; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/gstreamer/extr_gstvlcpictureplaneallocator.c_gst_vlc_picture_plane_allocator_init.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/gstreamer/extr_gstvlcpictureplaneallocator.c_gst_vlc_picture_plane_allocator_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@GST_VLC_PICTURE_PLANE_ALLOCATOR_NAME = common dso_local global i32 0, align 4
@gst_vlc_picture_plane_map = common dso_local global i32 0, align 4
@gst_vlc_picture_plane_unmap = common dso_local global i32 0, align 4
@gst_vlc_picture_plane_copy = common dso_local global i32 0, align 4
@GST_ALLOCATOR_FLAG_CUSTOM_ALLOC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @gst_vlc_picture_plane_allocator_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gst_vlc_picture_plane_allocator_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.TYPE_3__* @GST_ALLOCATOR_CAST(i32* %4)
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %3, align 8
  %6 = load i32, i32* @GST_VLC_PICTURE_PLANE_ALLOCATOR_NAME, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 3
  store i32 %6, i32* %8, align 4
  %9 = load i32, i32* @gst_vlc_picture_plane_map, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @gst_vlc_picture_plane_unmap, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @gst_vlc_picture_plane_copy, align 4
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @GST_ALLOCATOR_FLAG_CUSTOM_ALLOC, align 4
  %20 = call i32 @GST_OBJECT_FLAG_SET(i32* %18, i32 %19)
  ret void
}

declare dso_local %struct.TYPE_3__* @GST_ALLOCATOR_CAST(i32*) #1

declare dso_local i32 @GST_OBJECT_FLAG_SET(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
